[project]
name = "ref-checker"
version = "0.1.0"
description = "MVP reference checker built with FastAPI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "jinja2>=3.1.0,<4.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-multipart>=0.0.7,<1.0.0",
    "streamlit>=1.40.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "httpx>=0.26.0,<0.27.0"
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
